fix: show readable errors at all points of failure

--- a/components/css/buckyless/widget.less
+++ b/components/css/buckyless/widget.less
@@ -323,6 +323,10 @@
           font-size: 20px;
           margin-right: 10px;
         }
+
+        .action-item__error-quantity {
+          margin-right: 16px;
+        }
       }
 
       p.action-item__showing {
